[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemies/auto_focus.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 36.4966

[node name="AutoFocus" type="KinematicBody2D" groups=["Enemies"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TargetArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetArea"]
shape = SubResource( 2 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="TargetArea" to="." method="_on_TargetArea_body_entered"]
[connection signal="body_exited" from="TargetArea" to="." method="_on_TargetArea_body_exited"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
